# Kelal-Gateway

./: .env.example  .gitignore  COMPLETE_SETUP.md  DEPLOYMENT.md  Dockerfile  Dockerfile.render  README.md  SETUP.md  check-status.sh  cleanup.sh  deploy.config.js  deploy.sh  docker-compose.yml  download-project.js  package-lock.json  package.json  render-build.cjs  render-build.js  render.yaml  tailwind.config.js  vite.config.cjs  vite.config.js  vite.config.ts
.elasticbeanstalk/: config.yml
KelalGatewayMobile/: App.tsx  app.json  metro.config.js  package-lock.json  package.json
KelalGatewayMobile/android/: settings.gradle
KelalGatewayMobile/app/: _layout.tsx
KelalGatewayMobile/components/: AuthGate.tsx
KelalGatewayMobile/context/: AuthContext.tsx
KelalGatewayMobile/lib/: supabase.ts
android/: build.gradle  gradlew  settings.gradle
android/app/: CMakeLists.txt  build.gradle  debug.keystore
backend/: .env.example  .gitignore  Dockerfile  README.md  jest.config.js  server.cjs  server.js
backend/coverage/: clover.xml  coverage-final.json  lcov.info
backend/middleware/: auth.js
backend/models/: Event.js  StaffMember.js  Ticket.js  User.js  Venue.js
backend/routes/: auth.js  events.js  notifications.js  staff.js  tickets.js  users.js
infrastructure/: backup.yml  cloudformation.yml  create-nat-gateway.sh  db-migration.sql  deploy-backup.sh  deploy-monitoring.sh  deploy-stack.sh  generate-sample-data.sql  init-db.sh  load-sample-data.sh  monitoring.yml  update-route-table.sh
src/: App.tsx  index.css  index.css.fix  main.tsx
src/config/: env.ts
(+130 files in other folders)
